# NoteProgression

./: .gitignore  CMakeLists.txt  Error.cpp  Error.h  NoteProgression.cpp  NoteProgression.h  README.md  Random.cpp  Random.h
note/: GenerationMode.cpp  GenerationMode.h  Instrument.cpp  Instrument.h  Note.cpp  Note.h  NoteType.cpp  NoteType.h  Panning.cpp  Panning.h
note/random/: RandomData.h  RandomPattern.cpp  RandomPatternSegment.cpp
util/: BinaryFile.cpp  BinaryFile.h  OutputData.h  Random.cpp  Random.h  RandomPattern.cpp  RandomPattern.h  RandomPatternSegment.cpp  RandomPatternSegment.h  Utility.cpp  Utility.h
